feat: add GET /teams
